--- a/package.json
+++ b/package.json
@@ -22,10 +22,13 @@
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.5",
     "css-loader": "^2.1.1",
+    "file-loader": "^3.0.1",
     "gulp": "^4.0.0",
+    "img-loader": "^3.0.1",
     "node-sass": "^4.11.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
+    "url-loader": "^1.1.2",
     "vinyl-named": "^1.1.0",
     "webpack-stream": "^5.2.1"
   },
